force-app/main/default/objects/Component__c/Component__c.object-meta.xml
<CustomObject>
    <description>JUnction Object to generate Bundles for Coffee-Maschines and related several components to one maschine</description>
    <label>Component</label>
    <nameField>
        <label>Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>