force-app/main/default/objects/Component__c/fields/BaseMachine__c.field-meta.xml
<CustomField>
    <fullName>BaseMachine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Basisgerät als Grundlage für die Zusatzausstattung</inlineHelpText>
    <label>Base Machine</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.IsMachine__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Bitte wähle ein Basis-Gerät aus.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Components (Product (Basisgerät))</relationshipLabel>
    <relationshipName>Zusatzausstattungen</relationshipName>
    <type>Lookup</type>
</CustomField>