force-app/main/default/objects/Component__c/fields/Component__c.field-meta.xml
<CustomField>
    <fullName>Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Component</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.IsMachine__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Bitte wähle ein verfügbar Komponente aus.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Components (Produktkomponente)</relationshipLabel>
    <relationshipName>Produktkomponenten</relationshipName>
    <type>Lookup</type>
</CustomField>