force-app/main/default/objects/Component__c/fields/NonDiscountable__c.field-meta.xml
<CustomField>
    <fullName>NonDiscountable__c</fullName>
    <formula>Component__r.NotDiscountable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non Discountable</label>
    <type>Checkbox</type>
</CustomField>