force-app/main/default/objects/Component__c/fields/Price2__c.field-meta.xml
<CustomField>
    <fullName>Price2__c</fullName>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>